# bobo

./: BFS.py  Knight's Tour.py  LICENSE  README.md  bobo.py  pathfinding.py  pyproject.toml  rotate_tetromino.py
bobo/: __init__.py  __main__.py  cli.py  detector.py  tracer.py  visualizer.py
example_prototypes/: maze_pattern_generation.py
example_prototypes/Dynamic Programming/: Unique Paths.py
example_prototypes/Prefix Sum/: Prefix Sum.py
examples/: 8queens.py  add_matrix.py  bfs.py  flood_fill.py  flood_fill_bfs.py  knights_tour.py  kt1.py  kt2.py  kt3.py  kt4.py  maze1.py  maze2.py  maze3.py  maze_generation.py  prefix_sum.py  pyramid.py  rotate_tetromino.py  sm1.py  sm2.py  sm3.py  sm4.py  sudoku_backtrack.py  unique_paths.py
