[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bobo"
version = "1.0.0"
authors = [
  { name="ardnyx", email="dannleyesa@gmail.com" },
]
description = "A zero-config terminal-based grid algorithms visualizer."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ardnyx/bobo"
Issues = "https://github.com/ardnyx/bobo/issues"
